# Aegis

./: .gitignore  BUG_REPORT.md  CODE_REVIEW.md  COMANDOS_RAPIDOS.md  COMO_PROSSEGUIR.md  LIMPEZA_REALIZADA.md  POOL_CREATION_ISSUE_DIAGNOSIS.md  README.md  RELATORIO_TESTE_POOLS.md  RESUMO_FINAL.md  STATUS_FINAL_POOLS.md  TESTE_FRONTEND.md  TESTING_GUIDE.md  install.sh  package-lock.json  package.json  vercel.json
aegis-protocol/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
aegis-protocol/app/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
aegis-protocol/app/components/: AegisProvider.tsx  WalletProvider.tsx
aegis-protocol/app/hooks/: useAegis.ts
aegis-protocol/app/pages/: _app.tsx  index.tsx
aegis-protocol/docs/: README.md  api-guide.md  architecture.md  deploy-guide.md  security-audit.md
aegis-protocol/program/: Anchor.toml  Cargo.toml  check_pool_size  package-lock.json  package.json  tsconfig.json
aegis-protocol/program/idl/: aegis_protocol.json
aegis-protocol/program/scripts/: deploy-devnet.js  deploy-with-retry.sh  init-pools-treasury.js  init-pools.js  test-create-simple-pool.js
aegis-protocol/program/src/: constants.rs  errors.rs  lib.rs  math.rs  oracle.rs  pool.rs  seeds.rs  state.rs  token_utils.rs  validation.rs  vault.rs
aegis-protocol/program/tests/: aegis-protocol.ts  pools.ts  tokenomics.test.ts
aegis-protocol/scripts/: deploy-devnet.sh  init-pools-simple.js
aegis-protocol/sdk/: .eslintrc.json  ACAO_IMEDIATA.md  INDEX_DOCUMENTACAO.md  INSTRUCOES_FINAIS.md  PLANO_ABERTURA_POOLS.md  PROBLEMA_PROGRAM_ID.md  README.md  RECAPITULACAO_COMPLETA.md  RESULTADO_OTIMIZADO.md  RESUMO_FINAL.md  RESUMO_FINAL_EXECUCAO.md  RESUMO_SITUACAO.md  SOLUCAO_RAPIDA.md  STATUS_EXECUCAO.md  STATUS_FINAL.md  STATUS_UPGRADE.md  env.local.example  package.json  tsconfig.json
aegis-protocol/sdk/config/: devnet.pools.json  devnet.tokens.json  devnet.wallets.example.json
aegis-protocol/sdk/scripts/: README-POOL-INIT.md  bootstrap-devnet.ts  check-mint-authority.ts  check-pool-accounts.ts  check-status.ts  close-all-buffers-complete.sh  close-all-buffers-now.ts  close-all-buffers.sh  close-all-buffers.ts  complete-setup-with-upgrade.ts  comprehensive-test.ts  create-pools-direct.ts  create-pools-simple.js  create-pools-with-anchor.ts  create-vault-and-deposit.ts  find-and-close-buffers.ts  fund-and-setup.ts  fund-upgrade-authority.ts  fund-wallets.ts  init-pools.ts  initialize-pools-and-generate-volume.ts  maximize-pools-with-sol.ts  mint-tokens-to-treasury.ts  optimize-pools-with-limited-sol.ts  optimize-with-limited-sol.ts  recover-all-sol-and-deploy.ts  (+9 more)
(+93 files in other folders)
