[workspace]
members = [
    "program",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/your-repo/aegis-protocol"
license = "Apache-2.0"
keywords = ["solana", "blockchain", "ai", "security", "defi"]
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
solana-instruction = "=2.2.1"

