[package]
name = "aegis-protocol"
version = "0.1.0"
description = "Aegis Protocol - On-chain safety layer for AI agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aegis_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[profile.release]
overflow-checks = false
lto = false
codegen-units = 1
opt-level = 3

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
anchor-client = "0.32.0"
