[package]
name = "aegis-protocol"
version = "0.1.0"
description = "Aegis Protocol - On-chain safety layer for AI agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aegis_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
anchor-client = "0.32.0"
